# AgentCore_learning

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: local_test.py
src/bigquery_mcp/: __init__.py  aws_secrets.py  bigquery_service.py  config.py  exceptions.py  logging_config.py  server.py  utils.py  validators.py
